# daily-podcast

./: .gitignore  plan.md  spec.md  walkthrough.md
app/: pubspec.yaml
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/models/: dialogue_script.dart  podcast.dart  task_status.dart
app/lib/providers/: podcast_provider.dart
app/lib/repositories/: local_script_repository.dart  mock_podcast_repository.dart  podcast_repository.dart  real_podcast_repository.dart  script_repository.dart
app/lib/screens/: content_screen.dart  home_screen.dart  main_screen.dart  player_screen.dart  script_screen.dart  settings_screen.dart
app/lib/services/: audio_player_service.dart
app/lib/widgets/: script_view.dart
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: widget_test.dart
app/test/models/: dialogue_script_test.dart
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  generated_script.json  pyproject.toml  qwen_request.json  render.yaml  requirements.txt  test_podcastfy.py
backend/src/: api_router.py  config.py  main.py  models.py  podcastfy_client.py  storage_client.py
backend/src/audio/: qwen_handler.py  task_manager.py  tts_engine.py
backend/src/fetcher/: base.py  text_fetchers.py  youtube_fetcher.py
backend/src/writer/: llm_client.py  mock_client.py
backend/tests/: test_fetchers.py  test_integration.py
docs/: architecture-render-supabase.md  prd.md
docs/features/app-ui/: plans.md  report.md  tasks.md
docs/features/backend-integration/: plans.md  report.md  tasks.md
docs/features/podcast-engine/: plans.md  report.md  tasks.md
scripts/: run_backend.sh
(+10 files in other folders)
