[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "edge-tts>=7.2.7",
    "fastapi>=0.127.0",
    "feedparser>=6.0.12",
    "podcastfy",
    "google-generativeai>=0.8.6",
    "httpx>=0.27.0",
    "numpy>=1.24.0,<2.0.0",
    "pydantic>=2.0,<2.12",
    "pydantic-settings>=2.12.0",
    "pydub>=0.25.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "setuptools>=75.1.0",
    "uvicorn>=0.40.0",
    "youtube-transcript-api>=0.6.2",
    "onnx>=1.14.0,<1.17.0",
    "torchaudio>=2.6.0",
    "soundfile>=0.12.1",
    "nltk>=3.9.1",
    "jamo>=0.4.1",
    "python-mecab-ko>=1.3.7",
    "supabase>=2.0.0",
    "transformers>=4.48.0",
    "accelerate>=0.26.0",
    "scipy>=1.11.0",
    "sentencepiece>=0.1.99",
    "qwen-tts",
    "typer>=0.9.0",
]
